The line height and padding in em is calculated a little different between browser, so added just enough space to make sure there is no overlaping between the lines in the tile titles

--- a/frontend/content/assets/css/tiles.css
+++ b/frontend/content/assets/css/tiles.css
@@ -80,7 +80,7 @@ a.tile:hover {
     background: #fff;
     background: rgba(255,255,255,0.9);
     box-shadow: 5px 0 0 0 rgba(255,255,255,0.9), -5px 0 0 0 rgba(255,255,255,0.9);
-    padding: 0.128em 0;
+    padding: 0.08em 0;
 }
 
 .tile:hover .tile-bg .title span {
